// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormButtons Rendering Render the FormButtons component with default props 1`] = `
<div
  className="FormButtons"
>
  <FormSubmit
    id="formSubmit"
    text="Save changes"
  />
  <Button
    id="formCancel"
    onClick={[Function]}
    text="Cancel"
  />
</div>
`;

exports[`FormButtons Rendering Render the FormButtons component with props, children position at the beginning 1`] = `
<div
  className="FormButtons test_cn"
>
  <Button
    onClick={[Function]}
    text="Button at start"
  />
  <FormSubmit
    id="formSubmit"
    text="Submit"
  />
  <Button
    id="formCancel"
    onClick={[Function]}
    text="Abort"
  />
</div>
`;

exports[`FormButtons Rendering Render the FormButtons component with props, children position at the beginning 2`] = `
<div
  className="FormButtons test_cn"
>
  <Button
    onClick={[Function]}
    text="Button at start"
  />
  <FormSubmit
    id="formSubmit"
    text="Submit"
  />
  <Button
    id="formCancel"
    onClick={[Function]}
    text="Abort"
  />
</div>
`;

exports[`FormButtons Rendering Render the FormButtons component with props, children position at the end 1`] = `
<div
  className="FormButtons test_cn"
>
  <FormSubmit
    id="formSubmit"
    text="Submit"
  />
  <Button
    id="formCancel"
    onClick={[Function]}
    text="Abort"
  />
  <Button
    onClick={[Function]}
    text="Button at start"
  />
</div>
`;
